# Blackberry

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
assets/: index-mcpKZ98z.css  index-v0hydUWN.js
docs/: api.md  architecture.md  auth-bootstrap.md  data-model.md  prd.md  supabase-production-readiness.md  supabase.md
public/: manifest.webmanifest
services/ai-gateway/: pyproject.toml
services/ai-gateway/app/: main.py
services/ai-gateway/app/providers/: base.py  openai_compatible.py
services/ai-gateway/tests/: test_main.py
src/: main.tsx  styles.css
src/auth/: authBootstrap.test.ts  authBootstrap.ts
src/data/: initialState.ts  workspaceRepository.test.ts  workspaceRepository.ts  workspaceRepositoryFactory.test.ts  workspaceRepositoryFactory.ts
src/domain/: types.ts
src/services/: aiGatewayClient.ts
supabase/migrations/: 0001_initial_schema.sql
tests/: test_supabase_schema.py
